--- a/client/src/components/TransactionList.css
+++ b/client/src/components/TransactionList.css
@@ -9,6 +9,7 @@
 }
 .table-wrap {
   overflow-x: auto;
+  padding-bottom: 4px;
 }
 .tx-table {
   width: 100%;
